# survive

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Survive.pro
data/: example1.txt  example2.txt  example3.txt
res/: res.qrc
src/: drawarea.cpp  drawarea.h  main.cpp  mainwindow.cpp  mainwindow.h  survive.cpp  survive.h
test/: CMakeLists.txt  survive_test.cpp
ui/: mainwindow.ui
