CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTOUIC_SEARCH_PATHS ui)
SET(CMAKE_AUTORCC ON)

PROJECT(qttest)

FIND_PACKAGE(Qt5Widgets)
FIND_PACKAGE(Qt5Gui)
FIND_PACKAGE(Qt5Test)

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(EIGEN REQUIRED eigen3)

SET(SUR_SRCS 
                survive_test.cpp
                ../src/survive.cpp)
SET(SUR_HEADERS
                ../src/survive.h)

ADD_EXECUTABLE(qsur ${SUR_SRCS} ${SUR_HEADERS})
TARGET_LINK_LIBRARIES(qsur Qt5::Widgets Qt5::Gui Qt5::Test)
INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../src)

ADD_TEST(NAME qeval_test COMMAND qsur)
